--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lazorkit/wallet": "^2.0.1",
     "@simplewebauthn/browser": "^13.2.2",
+    "@zerodev/passkey-validator": "^5.6.0",
+    "@zerodev/sdk": "^5.5.7",
     "next": "16.1.2",
+    "permissionless": "^0.3.2",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "viem": "^2.44.4"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
