--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@simplewebauthn/browser": "^13.2.2",
     "@zerodev/passkey-validator": "^5.6.0",
     "@zerodev/sdk": "^5.5.7",
+    "@zerodev/webauthn-key": "^5.5.0",
     "next": "16.1.2",
     "permissionless": "^0.3.2",
     "react": "19.2.3",
